# aurarouter

./: .gitignore  AURAGRID.md  BACKEND_PLUGINS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GUI_GUIDE.md  MANIFEST.in  README.md  VERIFICATION_REPORT.md  auraconfig.yaml  aurarouter.py  aurarouter_legacy.py  environment.yaml  pyproject.toml  requirements-local.txt  requirements.txt  tatus --porcelain  awk '{print $2}'  xargs ls -l --time-style=long-iso  test_exe.py  test_router_legacy.py
.github/workflows/: publish.yml
docs/: ANALYZER_GUIDE.md  ARTIFACT_DISCOVERY.md  EXECUTION_MODES.md
examples/: grid_consumer_app.py
manifests/: auragrid_manifest.json  sample_config.yaml
scripts/: fetch_llamacpp_binaries.py
src/auragrid/: __init__.py  config_loader.py  discovery.py  lifecycle.py  mas_host.py  model_storage.py
src/aurarouter/: __init__.py  __main__.py  _logging.py  analyzer_pipeline.py  analyzer_protocol.py  analyzer_schema.py  analyzers.py  api.py  broker.py  budget_sync.py  catalog.py  catalog_model.py  cli.py  config.py  errors.py  event_reporter.py  fabric.py  intent_registry.py  ipc.py  mcp_tools.py  migration.py  monologue.py  notional.py  rag_enrichment.py  registration.py  routing.py  sanitizer.py  semantic_verbs.py  server.py  singleton.py  sovereignty.py  speculative.py  telemetry_config.py  tokens.py  tuning.py
src/aurarouter/analyzers/: __init__.py  edge_complexity.py  onnx_vector.py  slm_analyzer.py
src/aurarouter/auragrid/: __init__.py  config_loader.py  discovery.py  events.py  lifecycle.py  manifest.py  mas_host.py  model_storage.py  services.py
src/aurarouter/auth/: registry.py
src/aurarouter/contracts/: __init__.py  auracode.py  auraxlm.py
src/aurarouter/gui/: __init__.py  _format.py  app.py  config_panel.py  dag_visualizer.py  document_input.py  download_dialog.py  env_grid.py  env_local.py  environment.py  execution_trace.py  grid_deployment_panel.py  grid_status_panel.py  (+18 more)
tests/: conftest.py  test_analyzer_pipeline.py  test_analyzer_routing.py  test_analyzer_schema.py  test_analyzers.py  test_api.py  test_arbiter.py  test_asset_lifecycle.py  test_auragrid_integration.py  test_backward_compat.py  test_backwards_compat.py  test_base_provider_ext.py  test_broker.py  test_budget.py  test_catalog.py  test_catalog_crud.py  test_catalog_model.py  test_catalog_tools.py  test_cli.py  test_cli_expanded.py  test_cli_intents.py  test_config.py  test_config_nested_roles.py  test_config_savings.py  test_cross_language_serialization.py  test_cross_project_contracts.py  test_cross_project_integration.py  test_cross_stack_validation.py  test_dag_visualizer.py  test_discovery_budget.py  test_downloader.py  test_edge_complexity.py  test_encapsulation_accessors.py  test_encapsulation_audit.py  test_event_reporter.py  test_execution_trace.py  test_fabric.py  test_fabric_advisors.py  test_fabric_budget.py  test_fabric_savings.py  (+64 more)
tests/cross_sovereignty/: reflection_report.py  test_latency_benchmark.py  test_mcp_contract.py  test_routing_accuracy.py  test_routing_context_serialization.py
tests/gui/: test_gui_integration.py
tests/integration/: validate_roi_telemetry.py
tests/test_mcp_client/: test_client.py  test_registry.py
tests/test_providers/: conftest.py  test_claude.py  test_claude_sessions.py  test_google.py  test_google_sessions.py  test_llamacpp.py  test_llamacpp_server.py  test_llamacpp_server_sessions.py  test_llamacpp_sessions.py  test_ollama.py  test_ollama_sessions.py  test_openapi.py  test_openapi_sessions.py  test_token_counting.py
tests/test_runtime/: test_binary_manager.py  test_gguf_parser.py  test_server_process.py
tests/test_sessions/: test_gisting.py  test_manager.py  test_models.py  test_store.py
(+64 files in other folders)
