[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurarouter"
version = "0.3.0"
authors = [{ name = "Steven Siebert", email = "info@auracoredynamics.com" }]
description = "Multi-model MCP routing fabric for local and cloud LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp[cli]",
    "httpx",
    "google-genai",
    "pyyaml",
    "anthropic",
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
auragrid = ["auragrid-sdk>=4.0.0"]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "pytest-asyncio"]
all = ["PySide6>=6.6", "auragrid-sdk>=4.0.0", "pytest", "pytest-mock", "pytest-cov", "ruff", "pytest-asyncio"]

[project.scripts]
aurarouter = "aurarouter.cli:main"
aurarouter-gui = "aurarouter.gui.app:main"
aurarouter-mas = "aurarouter.auragrid.mas_host:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
