[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurarouter"
version = "0.4.0"
authors = [{ name = "Steven Siebert", email = "info@auracoredynamics.com" }]
description = "Multi-model MCP routing fabric for local and cloud LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp[cli]",
    "httpx",
    "google-genai",
    "pyyaml",
    "anthropic",
    "PySide6>=6.6",
]

[project.optional-dependencies]
local = ["huggingface-hub>=0.20.0"]
auragrid = ["auragrid-sdk>=4.0.0"]
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "pytest-asyncio", "huggingface-hub>=0.20.0"]
all = [
    "huggingface-hub>=0.20.0",
    "auragrid-sdk>=4.0.0",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "pytest-asyncio",
]

[project.scripts]
aurarouter = "aurarouter.cli:main"
aurarouter-gui = "aurarouter.gui.app:main"
aurarouter-mas = "aurarouter.auragrid.mas_host:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurarouter = ["bin/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
