[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurarouter"
version = "0.5.5"
authors = [{ name = "Steven Siebert", email = "info@auracoredynamics.com" }]
description = "Multi-model MCP routing fabric for local and cloud LLMs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp[cli]",
    "httpx",
    "pyyaml",
    "PySide6>=6.6",
    "onnxruntime>=1.17.0",
    "numpy>=1.24.0",
    "tokenizers>=0.19.0",
]

[project.optional-dependencies]
local = ["llama-cpp-python>=0.3.0", "huggingface-hub>=0.20.0"]
auragrid = ["auragrid>=4.0.0"]
vector = []
dev = ["pytest", "pytest-mock", "pytest-cov", "ruff", "pytest-asyncio"]
all = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.20.0",
    "auragrid>=4.0.0",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "pytest-asyncio",
]

[project.scripts]
aurarouter = "aurarouter.cli:main"
aurarouter-gui = "aurarouter.gui.app:main"
aurarouter-mas = "aurarouter.auragrid.mas_host:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aurarouter = ["resources/onnx/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
